--- a/other/news.html
+++ b/other/news.html
@@ -26,7 +26,7 @@
   <div id="backtop">
     <a style="color: white;" href="#">Top</a>
   </div>
-  <nav class="navbar navbar-expand-lg">
+  <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid nav1">
       <a class="navbar-brand" href="../index.html"><img src="../img/logo.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
